# slurmrestapi.qt

./: README.md  gen.sh
.openapi-generator/: FILES
client/: CMakeLists.txt  OAIDbv0_0_39_account_info.cpp  OAIDbv0_0_39_account_info.h  OAIDbv0_0_39_associations_info.cpp  OAIDbv0_0_39_associations_info.h  OAIDbv0_0_39_clusters_info.cpp  OAIDbv0_0_39_clusters_info.h  OAIDbv0_0_39_config_info.cpp  OAIDbv0_0_39_config_info.h  OAIDbv0_0_39_diag.cpp  OAIDbv0_0_39_diag.h  OAIDbv0_0_39_error.cpp  OAIDbv0_0_39_error.h  OAIDbv0_0_39_job_info.cpp  OAIDbv0_0_39_job_info.h  OAIDbv0_0_39_meta.cpp  OAIDbv0_0_39_meta.h  OAIDbv0_0_39_meta_Slurm.cpp  OAIDbv0_0_39_meta_Slurm.h  OAIDbv0_0_39_meta_Slurm_version.cpp  OAIDbv0_0_39_meta_Slurm_version.h  OAIDbv0_0_39_meta_plugin.cpp  OAIDbv0_0_39_meta_plugin.h  OAIDbv0_0_39_qos_info.cpp  OAIDbv0_0_39_qos_info.h  OAIDbv0_0_39_response_associations_delete.cpp  OAIDbv0_0_39_response_associations_delete.h  OAIDbv0_0_39_set_config.cpp  OAIDbv0_0_39_set_config.h  OAIDbv0_0_39_tres_info.cpp  OAIDbv0_0_39_tres_info.h  OAIDbv0_0_39_tres_update.cpp  OAIDbv0_0_39_tres_update.h  OAIDbv0_0_39_update_qos.cpp  OAIDbv0_0_39_update_qos.h  OAIDbv0_0_39_update_users.cpp  OAIDbv0_0_39_update_users.h  OAIDbv0_0_39_user_info.cpp  OAIDbv0_0_39_user_info.h  OAIDbv0_0_39_warning.cpp  (+1250 more)
